// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Bar Component Search Side Bar Component with available metrics 1`] = `
<SearchBar
  allAvailableMetrics={
    Array [
      Object {
        "catalog": "CUSTOM_METRICS",
        "id": "HIlAQYQBiaYaSxpXJ73K",
        "name": "[Prometheus Metric] prometheus.process_resident_memory_bytes",
        "recentlyCreated": true,
        "type": "line",
      },
      Object {
        "catalog": "CUSTOM_METRICS",
        "id": "Y4muP4QBiaYaSxpXk7r8",
        "name": "new metric",
        "recentlyCreated": false,
        "type": "line",
      },
      Object {
        "catalog": "CUSTOM_METRICS",
        "id": "HolAQYQBiaYaSxpXKL0T",
        "name": "[Prometheus Metric] prometheus.go_memstats_heap_sys_bytes",
        "recentlyCreated": true,
        "type": "line",
      },
      Object {
        "catalog": "CUSTOM_METRICS",
        "id": "tomAP4QBiaYaSxpXALls",
        "name": "[Logs] Average ram usage per day by windows os ",
        "recentlyCreated": false,
        "type": "line",
      },
      Object {
        "catalog": "prometheus",
        "id": "prometheus.process_resident_memory_bytes",
        "name": "prometheus.process_resident_memory_bytes",
        "recentlyCreated": false,
        "type": "gauge",
      },
    ]
  }
  handleAddMetric={[MockFunction]}
>
  <div>
    <EuiSearchBar
      defaultQuery=""
      onChange={[Function]}
    >
      <EuiFlexGroup
        alignItems="center"
        gutterSize="m"
        wrap={true}
      >
        <div
          className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap"
        >
          <EuiFlexItem
            className="euiSearchBar__searchHolder"
            grow={true}
          >
            <div
              className="euiFlexItem euiSearchBar__searchHolder"
            >
              <EuiSearchBox
                incremental={false}
                isInvalid={false}
                onSearch={[Function]}
                placeholder="Search..."
                query=""
              >
                <EuiFieldSearch
                  aria-label="This is a search bar. After typing your query, hit enter to filter the results lower in the page."
                  compressed={false}
                  defaultValue=""
                  fullWidth={true}
                  incremental={false}
                  inputRef={[Function]}
                  isClearable={true}
                  isInvalid={false}
                  isLoading={false}
                  onSearch={[Function]}
                  placeholder="Search..."
                >
                  <EuiFormControlLayout
                    compressed={false}
                    fullWidth={true}
                    icon="search"
                    isLoading={false}
                  >
                    <div
                      className="euiFormControlLayout euiFormControlLayout--fullWidth"
                    >
                      <div
                        className="euiFormControlLayout__childrenWrapper"
                      >
                        <EuiValidatableControl
                          isInvalid={false}
                        >
                          <input
                            aria-label="This is a search bar. After typing your query, hit enter to filter the results lower in the page."
                            className="euiFieldSearch euiFieldSearch--fullWidth"
                            defaultValue=""
                            onKeyUp={[Function]}
                            placeholder="Search..."
                            type="search"
                          />
                        </EuiValidatableControl>
                        <EuiFormControlLayoutIcons
                          compressed={false}
                          icon="search"
                          isLoading={false}
                        >
                          <div
                            className="euiFormControlLayoutIcons"
                          >
                            <EuiFormControlLayoutCustomIcon
                              size="m"
                              type="search"
                            >
                              <span
                                className="euiFormControlLayoutCustomIcon"
                              >
                                <EuiIcon
                                  aria-hidden="true"
                                  className="euiFormControlLayoutCustomIcon__icon"
                                  size="m"
                                  type="search"
                                >
                                  <EuiIconSearch
                                    aria-hidden={true}
                                    className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                                    focusable="false"
                                    role="img"
                                    style={null}
                                  >
                                    <svg
                                      aria-hidden={true}
                                      className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                                      focusable="false"
                                      height={16}
                                      role="img"
                                      style={null}
                                      viewBox="0 0 16 16"
                                      width={16}
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M11.271 11.978l3.872 3.873a.502.502 0 00.708 0 .502.502 0 000-.708l-3.565-3.564c2.38-2.747 2.267-6.923-.342-9.532-2.73-2.73-7.17-2.73-9.898 0-2.728 2.729-2.728 7.17 0 9.9a6.955 6.955 0 004.949 2.05.5.5 0 000-1 5.96 5.96 0 01-4.242-1.757 6.01 6.01 0 010-8.486c2.337-2.34 6.143-2.34 8.484 0a6.01 6.01 0 010 8.486.5.5 0 00.034.738z"
                                      />
                                    </svg>
                                  </EuiIconSearch>
                                </EuiIcon>
                              </span>
                            </EuiFormControlLayoutCustomIcon>
                          </div>
                        </EuiFormControlLayoutIcons>
                      </div>
                    </div>
                  </EuiFormControlLayout>
                </EuiFieldSearch>
              </EuiSearchBox>
            </div>
          </EuiFlexItem>
        </div>
      </EuiFlexGroup>
    </EuiSearchBar>
    <EuiGlobalToastList
      dismissToast={[Function]}
      side="right"
      toastLifeTimeMs={6000}
      toasts={Array []}
    >
      <div
        aria-live="polite"
        className="euiGlobalToastList euiGlobalToastList--right"
        role="region"
      />
    </EuiGlobalToastList>
  </div>
</SearchBar>
`;

exports[`Search Bar Component Search Side Bar Component with no available metrics 1`] = `
<SearchBar
  allAvailableMetrics={Array []}
  handleAddMetric={[MockFunction]}
>
  <div>
    <EuiSearchBar
      defaultQuery=""
      onChange={[Function]}
    >
      <EuiFlexGroup
        alignItems="center"
        gutterSize="m"
        wrap={true}
      >
        <div
          className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap"
        >
          <EuiFlexItem
            className="euiSearchBar__searchHolder"
            grow={true}
          >
            <div
              className="euiFlexItem euiSearchBar__searchHolder"
            >
              <EuiSearchBox
                incremental={false}
                isInvalid={false}
                onSearch={[Function]}
                placeholder="Search..."
                query=""
              >
                <EuiFieldSearch
                  aria-label="This is a search bar. After typing your query, hit enter to filter the results lower in the page."
                  compressed={false}
                  defaultValue=""
                  fullWidth={true}
                  incremental={false}
                  inputRef={[Function]}
                  isClearable={true}
                  isInvalid={false}
                  isLoading={false}
                  onSearch={[Function]}
                  placeholder="Search..."
                >
                  <EuiFormControlLayout
                    compressed={false}
                    fullWidth={true}
                    icon="search"
                    isLoading={false}
                  >
                    <div
                      className="euiFormControlLayout euiFormControlLayout--fullWidth"
                    >
                      <div
                        className="euiFormControlLayout__childrenWrapper"
                      >
                        <EuiValidatableControl
                          isInvalid={false}
                        >
                          <input
                            aria-label="This is a search bar. After typing your query, hit enter to filter the results lower in the page."
                            className="euiFieldSearch euiFieldSearch--fullWidth"
                            defaultValue=""
                            onKeyUp={[Function]}
                            placeholder="Search..."
                            type="search"
                          />
                        </EuiValidatableControl>
                        <EuiFormControlLayoutIcons
                          compressed={false}
                          icon="search"
                          isLoading={false}
                        >
                          <div
                            className="euiFormControlLayoutIcons"
                          >
                            <EuiFormControlLayoutCustomIcon
                              size="m"
                              type="search"
                            >
                              <span
                                className="euiFormControlLayoutCustomIcon"
                              >
                                <EuiIcon
                                  aria-hidden="true"
                                  className="euiFormControlLayoutCustomIcon__icon"
                                  size="m"
                                  type="search"
                                >
                                  <EuiIconEmpty
                                    aria-hidden={true}
                                    className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                    focusable="false"
                                    role="img"
                                    style={null}
                                  >
                                    <svg
                                      aria-hidden={true}
                                      className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                      focusable="false"
                                      height={16}
                                      role="img"
                                      style={null}
                                      viewBox="0 0 16 16"
                                      width={16}
                                      xmlns="http://www.w3.org/2000/svg"
                                    />
                                  </EuiIconEmpty>
                                </EuiIcon>
                              </span>
                            </EuiFormControlLayoutCustomIcon>
                          </div>
                        </EuiFormControlLayoutIcons>
                      </div>
                    </div>
                  </EuiFormControlLayout>
                </EuiFieldSearch>
              </EuiSearchBox>
            </div>
          </EuiFlexItem>
        </div>
      </EuiFlexGroup>
    </EuiSearchBar>
    <EuiGlobalToastList
      dismissToast={[Function]}
      side="right"
      toastLifeTimeMs={6000}
      toasts={Array []}
    >
      <div
        aria-live="polite"
        className="euiGlobalToastList euiGlobalToastList--right"
        role="region"
      />
    </EuiGlobalToastList>
  </div>
</SearchBar>
`;
